--- a/inn.html
+++ b/inn.html
@@ -12,20 +12,20 @@ title: "家庭民宿"
 ├ <b>院子</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">二楼</span><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
-│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
+│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
 │ │ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基础设施</span><div class="collapse-body">
 │ │ │   ├ 淋浴（热水）
 │ │ │   ├ 取暖器
 │ │ │   ├ 马桶
 │ │ │   ├ 洗脸池
 │ │ │   └ 化妆柜（含镜子）</div></div></div></div>
-│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">客厅</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="客厅" title="点击查看图片">图片</span><div class="collapse-body">
+│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">客厅</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="客厅" title="点击查看图片">图片</span><div class="collapse-body">
 │ │ │ └ 家具
 │ │ │   ├ 实木会议桌
 │ │ │   │ └ 凳子<sub>x6</sub>
 │ │ │   └ 沙发
 │ │ │</div></div>
-│ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">厨房</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="厨房" title="点击查看图片">图片</span><div class="collapse-body">
+│ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">厨房</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="厨房" title="点击查看图片">图片</span><div class="collapse-body">
 │ │   └ 家具
 │ │     ├ 油烟机
 │ │     ├ 整体橱柜
@@ -37,7 +37,7 @@ title: "家庭民宿"
 │ │       └ 实木餐椅<sub>x4</sub></div></div>
 │ │</div></div>
 │ └ <b>房间</b>
-│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">203室（600元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="203室" title="点击查看图片">图片</span><div class="collapse-body">
+│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">203室（600元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="203室" title="点击查看图片">图片</span><div class="collapse-body">
 │   │ ├ 租金
 │   │ │ └ 含基本水电的使用。
 │   │ └ 家具
@@ -49,7 +49,7 @@ title: "家庭民宿"
 │   │     ├ 仿真植物
 │   │     └ 椅子
 │   │</div></div>
-│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">204室（700元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="204室" title="点击查看图片">图片</span><div class="collapse-body">
+│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">204室（700元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="204室" title="点击查看图片">图片</span><div class="collapse-body">
 │     ├ 租金
 │     │ └ 含基本水电的使用。
 │     └ 家具
@@ -64,21 +64,21 @@ title: "家庭民宿"
 │</div></div>
 └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">三楼</span><div class="collapse-body">
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="三楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="三楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
   │ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基础设施</span><div class="collapse-body">
   │ │   ├ 淋浴（热水）
   │ │   ├ 取暖器
   │ │   ├ 马桶
   │ │   ├ 洗脸池
   │ │   └ 化妆柜（含镜子）</div></div></div></div>
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">阳台</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="阳台" title="点击查看图片">图片</span><div class="collapse-body">
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">阳台</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="阳台" title="点击查看图片">图片</span><div class="collapse-body">
   │ │ └ 家具
   │ │   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">原木沙发<sup>无漆</sup></span><div class="collapse-body">
   │ │   │ ├ 3人座<sub>x1</sub>
   │ │   │ ├ 2人座<sub>x1</sub>
   │ │   │ └ 1人座<sub>x1</sub></div></div>
   │ │   └ 茶几<sup>无漆</sup></div></div>
-  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
+  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
   │   └ 家具
   │     ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣绳</span><div class="collapse-body">
   │     │ └ 22米</div></div>
@@ -86,7 +86,7 @@ title: "家庭民宿"
   │       └ 10KG容量</div></div></div></div>
   │</div></div>
   └ <b>房间</b>
-    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室（800元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
+    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室（800元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
@@ -99,7 +99,7 @@ title: "家庭民宿"
     │     ├ 仿真植物
     │     └ 椅子
     │</div></div>
-    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">302室（600元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="302室" title="点击查看图片">图片</span><div class="collapse-body">
+    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">302室（600元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="302室" title="点击查看图片">图片</span><div class="collapse-body">
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
@@ -111,7 +111,7 @@ title: "家庭民宿"
     │     ├ 仿真植物
     │     └ 椅子
     │</div></div>
-    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室（700元/月）</span><span class="gallery-open-btn" data-src="/assets/img/logo.png" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
+    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室（700元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
       ├ 租金
       │ └ 含基本水电的使用。
       └ 家具
