--- a/inn.html
+++ b/inn.html
@@ -211,17 +211,13 @@ title: "家庭民宿"
 八、如居住期彼此间产生矛盾。
    ├ 1、按照以上原则公事公办。
    └ 2、超出以上原则的，依着诚心和公平来协商处理。
-<div style="white-space: pre-wrap;">
-两点要求：
+<div>
+一个要求：
 A、不能养宠物。
-B、我们推崇健康的素食生活，我本人也是长期素食者。因此<span class="bottomborder4px-red"><strong>公用的厨房</strong>里不能出现荤腥的东西（包括蛋类）</span>；<span class="bottomborder4px-green">牛奶、羊奶等，及相关奶制品允许</span>。
-
-<em>备注：我们有时候也会免费提供一些自制的豆制品给大家。比如：豆浆，豆腐、豆干、油豆腐等。</em>
 </div>
 </pre>
   
 <div style="margin: 20px 0; font-weight: bold; text-align: center;">→有意加入我们的；请联系电话：19542586219，或微信：同电话号。</div>
-<div style="font-weight: bold; text-align: center; margin: 20px 0;"><span>节俭、朴实、薄欲、健康、积极<sup><abbr title="注：①此处引用的“节俭”、“朴实”、“薄欲”、“健康”、“积极”5个词语，所赋予的涵义属于我们个人的定义；不同人之间的标准会有所差别。">①</abbr></sup>。</span></div>
 
 <style>
 .rooms, .about {
