--- a/inn.html
+++ b/inn.html
@@ -80,8 +80,7 @@ title: "家庭民宿"
   │ │   └ 茶几<sup>无漆</sup></div></div>
   │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
   │   └ 家具
-  │     ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣绳</span><div class="collapse-body">
-  │     │ └ 22米</div></div>
+  │     ├ 晾衣绳
   │     └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">洗衣机</span><div class="collapse-body">
   │       └ 10KG容量</div></div></div></div>
   │</div></div>
@@ -194,10 +193,9 @@ title: "家庭民宿"
 <pre class="rules">
 <div style="white-space: pre-wrap;">
 <em>所有房间我们只添置了最基本的家具，并且符合健康、简朴、实用性的理念；所采购的家具很多都是<strong>原木、无漆</strong>的。剩下的空间，可以自由DIY，或者保持基本的简朴原貌。</em>
+有计划长期居住的人优先，短租的至少有计划租一个月。以下是我们的一些规则和要求。</div>
 
-此外，有计划长期居住的人优先，短租的至少有计划租一个月。以下是我们制定的一些规定和要求。</div>
-
-几个规定：
+一些规则：
 一、<span class="bottomborder2px-red">统一的月租金</span>。
    ├ 短租、长租；        
    ├ 淡季、旺季；
@@ -209,12 +207,11 @@ title: "家庭民宿"
 六、<span class="bottomborder2px-red">按天算租金</span>；意外情况退租，多余租金全额退还。
 七、<span class="bottomborder2px-red">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
 八、如居住期彼此间产生矛盾。
-   ├ 1、按照以上原则公事公办。
-   └ 2、超出以上原则的，依着诚心和公平来协商处理。
-<div>
+   ├ 1、按照以上规则公事公办。
+   └ 2、超出以上规则的，依着诚心和公平来协商处理。
+
 一个要求：
 A、不能养宠物。
-</div>
 </pre>
   
 <div style="margin: 20px 0; font-weight: bold; text-align: center;">→有意加入我们的；请联系电话：19542586219，或微信：同电话号。</div>
