--- a/inn.html
+++ b/inn.html
@@ -214,7 +214,7 @@ title: "家庭民宿"
 A、不能养宠物。
 </pre>
   
-<div style="margin: 20px 0; font-weight: bold; text-align: center;">→有意加入我们的；请联系电话：19542586219，或微信：同电话号。</div>
+<div style="margin: 20px 0; font-weight: bold; text-align: center;">联系电话：19542586219，微信：同电话号。</div>
 
 <style>
 .rooms, .about {
