在移动端把imagegallery移动到底部

--- a/index.html
+++ b/index.html
@@ -50,8 +50,13 @@ layout: default
   height: auto;
 }
 
-.on-mobile #imagegallery img {
-  width: 150px;
+body.on-mobile #imagegallery-body {
+  top: auto;
+  bottom: 0;
+}
+
+body.on-mobile #imagegallery img {
+  width: 120px;
 }
 </style>
 <script>
