--- a/buddha.html
+++ b/buddha.html
@@ -22,7 +22,7 @@ title: "布袋和尚简介"
 </div>
 <style>
 .buddha {
-  font-family: simsun, simkai, kaiti, simhei, serif;
+  font-family: simkai, kaiti, simsun, dengxian, simhei, serif;
   letter-spacing: -0.035em;
   max-width: 600px;
   margin-top: 25px;
