--- a/buddha.html
+++ b/buddha.html
@@ -24,7 +24,7 @@ title: "布袋和尚简介"
 .buddha {
   font-family: simkai, kaiti, simsun, dengxian, simhei, serif;
   letter-spacing: -0.035em;
-  max-width: 600px;
+  max-width: 500px;
   margin-top: 25px;
 }
 
@@ -45,7 +45,11 @@ button {
   cursor: pointer;
 }
 
-.on-mobile .imgbuddha {
+body.on-mobile .buddha {
+  max-width: 100%;
+}
+
+body.on-mobile .imgbuddha {
   width: 40%;
 }
 </style>
