--- a/inn.html
+++ b/inn.html
@@ -3,10 +3,33 @@ permalink: /inn.html
 layout: default
 title: "家庭民宿"
 ---
-<div style="background-color: white; position: fixed; left: 0; top: 0; z-index: 9999;"><div>&copy;<strong>布袋豆腐</strong><span style="font-size: 85%;">（2023-2024）</span></div></div>
 <div style="margin-top: 40px;"><mark>该页面的部分信息还不完整，待更新。</mark></div>
+
+<pre class="rules">
+<div style="white-space: pre-wrap;">
+<em>所有房间只添置最基本的家具，其实我觉得健康、简朴、实用性的理念也挺好的；所采购的家具很多都是<strong>原木、无漆</strong>的。剩下的空间，可以自由DIY。</em>有计划长住的人优先。以下是我们的一些规则和要求。</div>
+
+一些规则：
+一、<span class="bottomborder2px-red">统一的月租金</span>。
+   ├ 短租、长租；        
+   ├ 淡季、旺季；
+   └ 月付、季付、半年付、年付。
+二、<span class="bottomborder2px-red">租金包基本的水电使用费</span>。
+三、<span class="bottomborder2px-red">无租房押金</span>。
+四、<span class="bottomborder2px-red">也没有钥匙押金</span>。
+五、<span class="bottomborder2px-red">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
+六、<span class="bottomborder2px-red">按天算租金</span>；意外情况退租，多余租金全额退还。
+七、<span class="bottomborder2px-red">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
+八、如居住期彼此间产生矛盾。
+   ├ 1、按照以上规则公事公办。
+   └ 2、超出以上规则的，依着诚心和公平来协商处理。
+
+一个要求：
+A、不能养宠物。
+</pre>
+
 <pre class="rooms" style="margin-top: 20px;">
-<b>家庭民宿出租</b>
+<b>基本信息</b>
 ├ <b>地点</b>
 │ └ 银桥镇头铺村
 ├ <b>院子</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
@@ -189,29 +212,6 @@ title: "家庭民宿"
   │ └ 9.8千米</div></div>
   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">喜洲古镇</del></span><div class="collapse-body">
     └ 12千米</div></div></div></div>
-</pre>
-<pre class="rules">
-<div style="white-space: pre-wrap;">
-<em>所有房间我们只添置了最基本的家具，并且符合健康、简朴、实用性的理念；所采购的家具很多都是<strong>原木、无漆</strong>的。剩下的空间，可以自由DIY，或者保持基本的简朴原貌。</em>
-有计划长期居住的人优先，短租的至少有计划租一个月。以下是我们的一些规则和要求。</div>
-
-一些规则：
-一、<span class="bottomborder2px-red">统一的月租金</span>。
-   ├ 短租、长租；        
-   ├ 淡季、旺季；
-   └ 月付、季付、半年付、年付。
-二、<span class="bottomborder2px-red">租金包基本的水电使用费</span>。
-三、<span class="bottomborder2px-red">无租房押金</span>。
-四、<span class="bottomborder2px-red">也没有钥匙押金</span>。
-五、<span class="bottomborder2px-red">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
-六、<span class="bottomborder2px-red">按天算租金</span>；意外情况退租，多余租金全额退还。
-七、<span class="bottomborder2px-red">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
-八、如居住期彼此间产生矛盾。
-   ├ 1、按照以上规则公事公办。
-   └ 2、超出以上规则的，依着诚心和公平来协商处理。
-
-一个要求：
-A、不能养宠物。
 </pre>
   
 <div style="margin: 20px 0; font-weight: bold; text-align: center;">联系电话：19542586219，微信：同电话号。</div>
