--- a/buddha.html
+++ b/buddha.html
@@ -25,7 +25,6 @@ title: "布袋和尚简介"
   font-family: simkai, kaiti, simsun, dengxian, simhei, serif;
   letter-spacing: -0.035em;
   max-width: 500px;
-  margin-top: 25px;
 }
 
 .imgbuddha {
@@ -53,7 +52,9 @@ body.on-mobile .imgbuddha {
   width: 40%;
 }
 </style>
-
+<script>
+document.querySelector('.brand').style.display = 'none';
+</script>
 <script>
 (function() {
   var btnPrev = document.getElementById('btn-prev');
