--- a/inn.html
+++ b/inn.html
@@ -3,11 +3,41 @@ permalink: /inn.html
 layout: default
 title: "家庭民宿"
 ---
-<div style="margin-top: 40px;"><mark>该页面的部分信息还不完整，待更新。</mark></div>
+<div id="inngallery">
+  <div><img src="/assets/img/inn/101.jpg" alt="/assets/img/inn/101.jpg"><div>院子1</div></div>
+  <div><img src="/assets/img/inn/102.jpg" alt="/assets/img/inn/102.jpg"><div>院子2</div></div>
+  <div><img src="/assets/img/inn/203.jpg" alt="/assets/img/inn/203.jpg"><div>203室 - 600元/月</div></div>
+  <div><img src="/assets/img/inn/204.jpg" alt="/assets/img/inn/204.jpg"><div>204室 - 700元/月</div></div>
+  <div><img src="/assets/img/inn/301.jpg" alt="/assets/img/inn/301.jpg"><div>301室 - 800元/月</div></div>
+  <div><img src="/assets/img/inn/302.jpg" alt="/assets/img/inn/302.jpg"><div>302室 - 600元/月</div></div>
+  <div><img src="/assets/img/inn/303.jpg" alt="/assets/img/inn/303.jpg"><div>303室 - 700元/月</div></div>
+  <div><img src="/assets/img/inn/bathroom1.jpg" alt="/assets/img/inn/bathroom1.jpg"><div>卫生间1</div></div>
+  <div><img src="/assets/img/inn/bathroom2.jpg" alt="/assets/img/inn/bathroom2.jpg"><div>卫生间2</div></div>
+  <div><img src="/assets/img/inn/200p1.jpg" alt="/assets/img/inn/200p1.jpg"><div>2楼公共区域</div></div>
+  <div><img src="/assets/img/inn/300p1.jpg" alt="/assets/img/inn/300p1.jpg"><div>3楼公共区域</div></div>
+  <div><img src="/assets/img/inn/300p2.jpg" alt="/assets/img/inn/300p2.jpg"><div>3楼洗凉衣区域</div></div>
+</div>
+<style>
+#inngallery {
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+
+#inngallery div {
+  align-self: center;
+}
+
+#inngallery img {
+  width: 300px;
+  height: auto;
+}
+</style>
 
 <pre class="rules">
 <div style="white-space: pre-wrap;">
-<em>所有房间只添置最基本的家具，其实我觉得健康、简朴、实用性的理念也挺好的；所采购的家具很多都是<strong>原木、无漆</strong>的。剩下的空间，可以自由DIY。</em>有计划长住的人优先。以下是我们的一些规则和要求。</div>
+<em>房间只添置了最基本的家具，所采购的家具很多都是<b>原木</b>、<b>无漆</b>的。其实健康、简朴、实用性的理念也挺好的，剩下的空间可以自由DIY。</em><b><strong>有计划</strong>长住的人优先</b>，以下是我们的规则和要求。</div>
 
 一些规则：
 一、<span class="bottomborder2px-red">统一的月租金</span>。
@@ -24,7 +54,7 @@ title: "家庭民宿"
    ├ 1、按照以上规则公事公办。
    └ 2、超出以上规则的，依着诚心和公平来协商处理。
 
-一个要求：
+暂时想到的一个要求：
 A、不能养宠物。
 </pre>
 
@@ -35,20 +65,20 @@ A、不能养宠物。
 ├ <b>院子</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">二楼</span><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
-│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="二楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
+│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/inn/bathroom1.jpg" data-alt="二楼卫生间1" title="点击查看图片"><em>参考三楼</em>图片1</span><span class="gallery-open-btn" data-src="/assets/img/inn/bathroom2.jpg" data-alt="二楼卫生间2" title="点击查看图片"><em>参考三楼</em>图片2</span><div class="collapse-body">
 │ │ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基础设施</span><div class="collapse-body">
 │ │ │   ├ 淋浴（热水）
 │ │ │   ├ 取暖器
 │ │ │   ├ 马桶
 │ │ │   ├ 洗脸池
 │ │ │   └ 化妆柜（含镜子）</div></div></div></div>
-│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">客厅</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="客厅" title="点击查看图片">图片</span><div class="collapse-body">
+│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">客厅</span><span class="gallery-open-btn" data-src="/assets/img/inn/200p1.jpg" data-alt="客厅" title="点击查看图片">图片</span><div class="collapse-body">
 │ │ │ └ 家具
 │ │ │   ├ 实木会议桌
 │ │ │   │ └ 凳子<sub>x6</sub>
 │ │ │   └ 沙发
 │ │ │</div></div>
-│ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">厨房</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="厨房" title="点击查看图片">图片</span><div class="collapse-body">
+│ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">厨房</span><span>图片待补充</span><span class="gallery-open-btn hide" data-src="/assets/img/inn/kitchen.jpg" data-alt="厨房" title="点击查看图片">图片</span><div class="collapse-body">
 │ │   └ 家具
 │ │     ├ 油烟机
 │ │     ├ 整体橱柜
@@ -60,7 +90,7 @@ A、不能养宠物。
 │ │       └ 实木餐椅<sub>x4</sub></div></div>
 │ │</div></div>
 │ └ <b>房间</b>
-│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">203室（600元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="203室" title="点击查看图片">图片</span><div class="collapse-body">
+│   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">203室（600元/月）</span><span class="gallery-open-btn" data-src="/assets/img/inn/203.jpg" data-alt="203室" title="点击查看图片">图片</span><div class="collapse-body">
 │   │ ├ 租金
 │   │ │ └ 含基本水电的使用。
 │   │ └ 家具
@@ -72,7 +102,7 @@ A、不能养宠物。
 │   │     ├ 仿真植物
 │   │     └ 椅子
 │   │</div></div>
-│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">204室（700元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="204室" title="点击查看图片">图片</span><div class="collapse-body">
+│   └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">204室（700元/月）</span><span>图片待补充</span><span class="gallery-open-btn hide" data-src="/assets/img/inn/204.jpg" data-alt="204室" title="点击查看图片">图片</span><div class="collapse-body">
 │     ├ 租金
 │     │ └ 含基本水电的使用。
 │     └ 家具
@@ -87,28 +117,28 @@ A、不能养宠物。
 │</div></div>
 └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">三楼</span><div class="collapse-body">
   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="三楼卫生间" title="点击查看图片">图片</span><div class="collapse-body">
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/inn/bathroom1.jpg" data-alt="三楼卫生间" title="点击查看图片">图片1</span><span class="gallery-open-btn" data-src="/assets/img/inn/bathroom2.jpg" data-alt="三楼卫生间" title="点击查看图片">图片2</span><div class="collapse-body">
   │ │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">基础设施</span><div class="collapse-body">
   │ │   ├ 淋浴（热水）
   │ │   ├ 取暖器
   │ │   ├ 马桶
   │ │   ├ 洗脸池
   │ │   └ 化妆柜（含镜子）</div></div></div></div>
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">阳台</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="阳台" title="点击查看图片">图片</span><div class="collapse-body">
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">阳台</span><span class="gallery-open-btn hide" data-src="/assets/img/inn/300p1.jpg" data-alt="阳台" title="点击查看图片">图片</span><div class="collapse-body">
   │ │ └ 家具
   │ │   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">原木沙发<sup>无漆</sup></span><div class="collapse-body">
   │ │   │ ├ 3人座<sub>x1</sub>
   │ │   │ ├ 2人座<sub>x1</sub>
   │ │   │ └ 1人座<sub>x1</sub></div></div>
   │ │   └ 茶几<sup>无漆</sup></div></div>
-  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
+  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn" data-src="/assets/img/300p2.jpg" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
   │   └ 家具
   │     ├ 晾衣绳
   │     └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">洗衣机</span><div class="collapse-body">
   │       └ 10KG容量</div></div></div></div>
   │</div></div>
   └ <b>房间</b>
-    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室（800元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
+    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">301室（800元/月）</span><span class="gallery-open-btn" data-src="/assets/img/inn/301.jpg" data-alt="301室" title="点击查看图片">图片</span><div class="collapse-body">
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
@@ -121,7 +151,7 @@ A、不能养宠物。
     │     ├ 仿真植物
     │     └ 椅子
     │</div></div>
-    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">302室（600元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="302室" title="点击查看图片">图片</span><div class="collapse-body">
+    ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">302室（600元/月）</span><span class="gallery-open-btn" data-src="/assets/img/inn/302.jpg" data-alt="302室" title="点击查看图片">图片</span><div class="collapse-body">
     │ ├ 租金
     │ │ └ 含基本水电的使用。
     │ └ 家具
@@ -133,7 +163,7 @@ A、不能养宠物。
     │     ├ 仿真植物
     │     └ 椅子
     │</div></div>
-    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室（700元/月）</span><span class="gallery-open-btn hide" data-src="/assets/img/logo.png" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
+    └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">303室（700元/月）</span><span class="gallery-open-btn" data-src="/assets/img/inn/303.jpg" data-alt="303室" title="点击查看图片">图片</span><div class="collapse-body">
       ├ 租金
       │ └ 含基本水电的使用。
       └ 家具
