--- a/inn.html
+++ b/inn.html
@@ -32,6 +32,7 @@ title: "家庭民宿"
 #inngallery img {
   width: 300px;
   height: auto;
+  margin: 0 auto;
 }
 </style>
 
@@ -62,7 +63,7 @@ A、不能养宠物。
 <b>基本信息</b>
 ├ <b>地点</b>
 │ └ 银桥镇头铺村
-├ <b>院子</b><span class="gallery-open-btn" data-src="/assets/img/inn/1/01.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/1/02.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
+├ <b>院子</b><span class="gallery-open-btn" data-src="/assets/img/inn/101.jpg" data-alt="院内图1" title="点击查看图片">图1</span><span class="gallery-open-btn" data-src="/assets/img/inn/102.jpg" data-alt="院内图2" title="点击查看图片">图2</span>
 ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">二楼</span><div class="collapse-body">
 │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">公共区域</span><div class="collapse-body">
 │ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">卫生间</span><span class="gallery-open-btn" data-src="/assets/img/inn/bathroom1.jpg" data-alt="二楼卫生间1" title="点击查看图片"><em>参考三楼</em>图片1</span><span class="gallery-open-btn" data-src="/assets/img/inn/bathroom2.jpg" data-alt="二楼卫生间2" title="点击查看图片"><em>参考三楼</em>图片2</span><div class="collapse-body">
