--- a/inn.html
+++ b/inn.html
@@ -125,14 +125,14 @@ A、不能养宠物。
   │ │   ├ 马桶
   │ │   ├ 洗脸池
   │ │   └ 化妆柜（含镜子）</div></div></div></div>
-  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">阳台</span><span class="gallery-open-btn hide" data-src="/assets/img/inn/300p1.jpg" data-alt="阳台" title="点击查看图片">图片</span><div class="collapse-body">
+  │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">阳台</span><span class="gallery-open-btn" data-src="/assets/img/inn/300p1.jpg" data-alt="阳台" title="点击查看图片">图片</span><div class="collapse-body">
   │ │ └ 家具
   │ │   ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">原木沙发<sup>无漆</sup></span><div class="collapse-body">
   │ │   │ ├ 3人座<sub>x1</sub>
   │ │   │ ├ 2人座<sub>x1</sub>
   │ │   │ └ 1人座<sub>x1</sub></div></div>
   │ │   └ 茶几<sup>无漆</sup></div></div>
-  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn" data-src="/assets/img/300p2.jpg" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
+  │ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">晾衣区</span><span class="gallery-open-btn" data-src="/assets/img/inn/300p2.jpg" data-alt="晾衣区" title="点击查看图片">图片</span><div class="collapse-body">
   │   └ 家具
   │     ├ 晾衣绳
   │     └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">洗衣机</span><div class="collapse-body">
