--- a/inn.html
+++ b/inn.html
@@ -86,7 +86,7 @@ A、不能养宠物。
 │ │     ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">冰箱</span><div class="collapse-body">
 │ │     │ ├ 冷藏：83升。
 │ │     │ └ 冷冻：52升。</div></div>
-│ │     ├ 电磁炉
+│ │     ├ 燃气灶
 │ │     └ 实木餐桌
 │ │       └ 实木餐椅<sub>x4</sub></div></div>
 │ │</div></div>
