--- a/inn.html
+++ b/inn.html
@@ -23,6 +23,7 @@ title: "家庭民宿"
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
+  margin-top: 20px;
 }
 
 #inngallery div {
@@ -49,7 +50,7 @@ title: "家庭民宿"
 
 <pre class="rules">
 <div style="white-space: pre-wrap;">
-<em>房间只添置了最基本的家具，所采购的家具很多都是<b>原木</b>、<b>无漆</b>的。其实健康、简朴、实用性的理念也挺好的，剩下的空间可以自由DIY。</em><b><strong>有计划</strong>长住的人优先</b>，以下是我们的规则和要求。</div>
+<em>房间只添置了最基本的家具，所采购的家具很多都是<b>原木</b>、<b>无漆</b>的。其实健康、简朴、实用性的理念也挺好的，剩下的空间可以自由DIY。</em><b><strong>有计划</strong>长住的人优先</b>。</div>
 
 一些规则：
 一、<span class="bottomborder2px-red">统一的月租金</span>。
