--- a/inn.html
+++ b/inn.html
@@ -189,74 +189,53 @@ A、不能养宠物。
           └ 椅子</div></div></div></div>
 </pre>
 <pre class="about">
-<b>生活圈</b>
-├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">500米范围内</span><div class="collapse-body">
-│ ├ 生活
-│ │ ├ 山泉水取水处
-│ │ ├ 早餐店
-│ │ ├ 餐饮店
-│ │ ├ 便利生活超市
-│ │ ├ 农贸市场（<em><strong>每月4次大型集市</strong></em>）
-│ │ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">快递/物流点</span><div class="collapse-body">
-│ │ │ ├ 自提网点：圆通、申通、极兔、中通、韵达，及邮政。
-│ │ │ └ 送货上门：顺丰、京东、德邦等。</div></div>
-│ │ ├ 咖啡馆
-│ │ ├ <b>很多旅居的邻居</b>
-│ │ ├ 云南农村信用银行
-│ │ ├ 中国邮政
-│ │ └ 镇卫生院
-│ ├ 学校/行政
-│ │ ├ 幼儿园
-│ │ ├ 镇中学
-│ │ ├ 镇公安局
-│ │ └ 镇政府
-│ └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>外出</b></span><div class="collapse-body">
-│   │ C7路公交车
-│   │ ├ 九孔桥
-│   │ ├ 鹤阳
-│   └─┼ <b>银桥镇政府（本站公交车站）</b>
-│     ↓
-│     ├ 银桥幼儿园
-│     ├ 磻曲
-│     ├ 银桥村
-│     ├ 阳波
-│     ├ 阳乡
-│  3KM├ 无为寺
-│     ├ 双阳
-│     ├ 北五里桥
-│     ├ 绿桃村
-│ ≈6KM├ 三塔路口
-│ ≈6KM├ 北门桥头
-│     ├ 水碓村
-│ ≈8KM├ 三月街口
-│ ≈8KM├ 人民路口
-│ ≈8KM├ 红龙井
-│     ├ 一塔路口
-│     ├ 玉局路口
-│     ├ 学府路口
-│     ├ 弘圣路口
-│     ├ 山水间
-│     └ 大理财校</div></div>
-│</div></div>
-├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">3千米范围内</span><div class="collapse-body">
-│ ├ 环洱海生态走廊
-│ └ 更多的民宿、农场、庄园，及来自五湖四海的邻居。
-│</div></div>
-└ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">7千米范围内</span><div class="collapse-body">
-  ├ 无为寺（灵鹫山大门）
-  ├ 素食街
-  ├ 三塔
-  ├ 崇圣寺
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">素方舟</del></span><div class="collapse-body">
-  │ └ 7.2千米</div></div>
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">大理古城北门</del></span><div class="collapse-body">
-  │ └ 7.7千米</div></div>
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">三月街</del></span><div class="collapse-body">
-  │ └ 8.2千米</div></div>
-  ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">大理大学</del></span><div class="collapse-body">
-  │ └ 9.8千米</div></div>
-  └ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><del style="opacity: .5;">喜洲古镇</del></span><div class="collapse-body">
-    └ 12千米</div></div></div></div>
+500米内生活圈
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">生活</span><div class="collapse-body">
+│ ├ 山泉水取水处
+│ ├ 早餐店
+│ ├ 餐饮店
+│ ├ 便利生活超市
+│ ├ 农贸市场（<em><strong>每月4次大型集市</strong></em>）
+│ ├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">快递/物流点</span><div class="collapse-body">
+│ │ ├ 自提网点：圆通、申通、极兔、中通、韵达，及邮政。
+│ │ └ 送货上门：顺丰、京东、德邦等。</div></div>
+│ ├ 咖啡馆
+│ ├ <b>很多旅居的邻居</b>
+│ ├ 云南农村信用银行
+│ ├ 中国邮政
+│ └ 镇卫生院</div></div>
+├ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse">学校/行政</span><div class="collapse-body">
+│ ├ 幼儿园
+│ ├ 镇中学
+│ ├ 镇公安局
+│ └ 镇政府</div></div>
+└ <div class="collapse"><span class="collapse-toggler" data-toggle="collapse"><b>外出</b></span><div class="collapse-body">
+  │ C7路公交车
+  │ ├ 九孔桥
+  │ ├ 鹤阳
+  └─┼ <b>银桥镇政府（本站公交车站）</b>
+    ↓
+    ├ 银桥幼儿园
+    ├ 磻曲
+    ├ 银桥村
+    ├ 阳波
+    ├ 阳乡
+ 3KM├ 无为寺
+    ├ 双阳
+    ├ 北五里桥
+    ├ 绿桃村
+≈6KM├ 三塔路口
+≈6KM├ 北门桥头
+    ├ 水碓村
+≈8KM├ 三月街口
+≈8KM├ 人民路口
+≈8KM├ 红龙井
+    ├ 一塔路口
+    ├ 玉局路口
+    ├ 学府路口
+    ├ 弘圣路口
+    ├ 山水间
+    └ 大理财校</div></div>
 </pre>
   
 <div style="margin: 20px 0; font-weight: bold; text-align: center;">联系电话：19542586219，微信：同电话号。</div>
