--- a/inn.html
+++ b/inn.html
@@ -4,18 +4,18 @@ layout: default
 title: "家庭民宿"
 ---
 <div id="inngallery">
-  <div><img src="/assets/img/inn/101.jpg" alt="/assets/img/inn/101.jpg"><div><span class="arrow">▲</span>院子1</div></div>
-  <div><img src="/assets/img/inn/102.jpg" alt="/assets/img/inn/102.jpg"><div><span class="arrow">▲</span>院子2</div></div>
+  <div><img src="/assets/img/inn/101.jpg" alt="/assets/img/inn/101.jpg"><div><span class="arrow">▲</span>院子（1）</div></div>
+  <div><img src="/assets/img/inn/102.jpg" alt="/assets/img/inn/102.jpg"><div><span class="arrow">▲</span>院子（2）</div></div>
   <div><img src="/assets/img/inn/203.jpg" alt="/assets/img/inn/203.jpg"><div><span class="arrow">▲</span>203室 - 600元/月</div></div>
   <div><img src="/assets/img/inn/204.jpg" alt="/assets/img/inn/204.jpg"><div><span class="arrow">▲</span>204室 - 700元/月</div></div>
   <div><img src="/assets/img/inn/301.jpg" alt="/assets/img/inn/301.jpg"><div><span class="arrow">▲</span>301室 - 800元/月</div></div>
   <div><img src="/assets/img/inn/302.jpg" alt="/assets/img/inn/302.jpg"><div><span class="arrow">▲</span>302室 - 600元/月</div></div>
   <div><img src="/assets/img/inn/303.jpg" alt="/assets/img/inn/303.jpg"><div><span class="arrow">▲</span>303室 - 700元/月</div></div>
-  <div><img src="/assets/img/inn/bathroom1.jpg" alt="/assets/img/inn/bathroom1.jpg"><div><span class="arrow">▲</span>卫生间1</div></div>
-  <div><img src="/assets/img/inn/bathroom2.jpg" alt="/assets/img/inn/bathroom2.jpg"><div><span class="arrow">▲</span>卫生间2</div></div>
-  <div><img src="/assets/img/inn/200p1.jpg" alt="/assets/img/inn/200p1.jpg"><div><span class="arrow">▲</span>2楼公共区域</div></div>
-  <div><img src="/assets/img/inn/300p1.jpg" alt="/assets/img/inn/300p1.jpg"><div><span class="arrow">▲</span>3楼公共区域</div></div>
-  <div><img src="/assets/img/inn/300p2.jpg" alt="/assets/img/inn/300p2.jpg"><div><span class="arrow">▲</span>3楼洗凉衣区域</div></div>
+  <div><img src="/assets/img/inn/bathroom1.jpg" alt="/assets/img/inn/bathroom1.jpg"><div><span class="arrow">▲</span>卫生间（外）</div></div>
+  <div><img src="/assets/img/inn/bathroom2.jpg" alt="/assets/img/inn/bathroom2.jpg"><div><span class="arrow">▲</span>卫生间（内）</div></div>
+  <div><img src="/assets/img/inn/200p1.jpg" alt="/assets/img/inn/200p1.jpg"><div><span class="arrow">▲</span>二楼公共区域</div></div>
+  <div><img src="/assets/img/inn/300p1.jpg" alt="/assets/img/inn/300p1.jpg"><div><span class="arrow">▲</span>三楼公共区域</div></div>
+  <div><img src="/assets/img/inn/300p2.jpg" alt="/assets/img/inn/300p2.jpg"><div><span class="arrow">▲</span>三楼洗凉衣区域</div></div>
 </div>
 <style>
 #inngallery {
@@ -63,7 +63,7 @@ title: "家庭民宿"
 三、<span class="bottomborder2px-red">无租房押金</span>。
 四、<span class="bottomborder2px-red">也没有钥匙押金</span>。
 五、<span class="bottomborder2px-red">不提前要求续交房租</span>，包括提前半个月乃至提前一天。
-六、<span class="bottomborder2px-red">按天算租金</span>；意外情况退租，多余租金全额退还。
+六、<span class="bottomborder2px-red">按天算租金</span>；如原计划外的情况下需要退租，多余租金全额退还。
 七、<span class="bottomborder2px-red">提供3天的免租时间</span>，对于要搬走又赶上房租到期的人。
 八、如居住期彼此间产生矛盾。
    ├ 1、按照以上规则公事公办。
