--- a/inn.html
+++ b/inn.html
@@ -50,7 +50,7 @@ title: "家庭民宿"
 
 <pre class="rules">
 <div style="white-space: pre-wrap;">
-<mark style="font-size: 115%; font-weight: bold;">由于我们自己，及目前已入住的伙伴都是素食者。我们协商了之后，决定只接纳<span style="border-bottom: 4px solid;">素食者</span>，或者能发心吃素的人入住。</mark>
+<mark style="font-size: 115%; font-weight: bold;">由于我们自己，及目前已入住的伙伴都是素食者。我们商量过后，决定只接纳<span style="border-bottom: 4px solid;">素食者</span>，或者能发心吃素的人入住。</mark>
 
 <em>房间只添置了最基本的家具，所采购的家具很多都是<b>原木</b>、<b>无漆</b>的。其实健康、简朴、实用性的理念也挺好的，剩下的空间可以自由DIY。</em><b><strong>有计划</strong>长住的人优先</b>。</div>
 
@@ -70,7 +70,7 @@ title: "家庭民宿"
    └ 2、超出以上规则的，依着诚心和公平来协商处理。
 
 暂时想到的一个要求：
-A、不能养宠物。
+一、不能养宠物。
 </pre>
 
 <pre class="rooms" style="margin-top: 20px;">
