--- a/index.html
+++ b/index.html
@@ -116,31 +116,62 @@ body.on-mobile #imagegallery img {
   clear: both;
 }
 
+#footer em,
+#footer a {
+  background-color: rgba(255, 255, 255, .95);
+}
+
 #footer a {
   float: right;
   text-decoration: underline;
-}
+} 
 </style>
 
-<div id="note">
-<span>同样的产品，在不同经销商处的销售价格可能不一致。</span>由于当初我们定价并未考虑到给经销商预留合理的利润空间，出于他们自身的运营成本，售价可能会比我们的略高一些。
+<div id="notes">
+  <div>告知：</div>
+  <div class="note"><span class="number">①</span><span style="font-weight: bold; border-bottom: 2px solid;">同样的产品，在不同经销商处的销售价格可能不一致。</span>由于当初我们定价并未考虑到给经销商预留合理的利润空间，出于他们自身的运营成本，售价可能会比我们的略高一些。</div>
+  <div class="note"><span class="number">②</span><span style="font-weight: bold; border-bottom: 2px solid;">如果买到的产品已变质，请联系我们退款。</span>由于豆制品在<dfn title="常温：一般指15°C到25°C的温度。">常温</dfn>下也特别容易变质，加上我们不会添加防腐剂，所以即使在生产的过程中，一疏忽都会变质<sup>发酸等</sup>。对于这种因我们还不能完全防范的情况，导致您买的产品是变质的，请加微信联系我们退款。</div>
 </div>
 <style>
-#note {
+#notes {
   font-size: 14px;
   font-style: italic;
   line-height: 1.375;
-  width: 300px;
   padding: 0 10px;
   position: fixed;
-  left: 20px;
+  left: 0;
+  right: 0;
   bottom: 40px;
 }
 
-.on-mobile #note {
-  width: 100%;
+#notes:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+#notes .note {
+  width: 300px;
+  margin: 10px;
+  float: left;
+  background-color: yellow;
+}
+
+#notes .number {
+  font-size: 145%;
+  line-height: 1;
+  vertical-align: middle;
+  position: relative;
+  top: -3px;
+}
+
+.on-mobile #notes {
   position: relative;
   left: 0;
   bottom: auto;
+}
+
+.on-mobile #notes .note {
+  width: 300px;
 }
 </style>
