--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@ body.on-mobile #imagegallery img {
 }
 
 .on-mobile #notes .note {
-  width: 100%;
+  width: auto;
+  margin: 10px 5px;
 }
 </style>
