--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ body.on-mobile #imagegallery img {
 <div id="notes">
   <div>告知：</div>
   <div class="note"><span class="number">①</span><span style="font-weight: bold; border-bottom: 2px solid;">同样的产品，在不同经销商处的销售价格可能不一致。</span>由于当初我们定价并未考虑到给经销商预留合理的利润空间，出于他们自身的运营成本，售价可能会比我们的略高一些。</div>
-  <div class="note"><span class="number">②</span><span style="font-weight: bold; border-bottom: 2px solid;">如果买到的产品已变质，请联系我们退款。</span>由于豆制品在<dfn title="常温：一般指15°C到25°C的温度。">常温</dfn>下也特别容易变质，加上我们不会添加防腐剂，所以即使在生产的过程中，一疏忽都会变质<sup>发酸等</sup>。对于因这种我们还不能完全防范的情况，导致您购买到的产品是变质的，请加微信联系我们退款。</div>
+  <div class="note"><span class="number">②</span><span style="font-weight: bold; border-bottom: 2px solid;">如果买到的产品已变质，请联系我们退款。</span>由于豆制品在<dfn title="常温：一般指15°C到25°C的温度。">常温</dfn>下也特别容易变质，加上我们不会添加防腐剂，所以即使在生产的过程中，一疏忽都会变质<sup>发酸等</sup>。对于因这种我们还不能完全防范的情况，导致您购买到的产品是变质的，请加我们的微信请求退款。</div>
 </div>
 <style>
 #notes {
