--- a/buddha.html
+++ b/buddha.html
@@ -4,7 +4,7 @@ layout: default
 title: "布袋和尚简介"
 ---
 <div class="buddha">
-  <div class="imgbuddha"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><span>布袋和尚像</span></div>
+  <div class="imgbuddha"><img src="/assets/img/Budai,_British_Museum.jpg" alt="布袋和尚，大英博物馆藏。" style="width: 100%;"><span style="font-size: 16px;">布袋和尚像</span></div>
 
   <div id="post">
     {% for post in site.posts %}
