--- a/404.html
+++ b/404.html
@@ -21,5 +21,5 @@ layout: null
   <h1>404</h1>
 
   <p><strong>没有这个页面 :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <p>请求的页面找不到。</p>
 </div>
